Aligne Text-Area Component with Text-Field Component, change VRT/CBT fixtures | mh, cs | #208

--- a/packages/components-js/src/components/form/textarea-wrapper/textarea-wrapper.scss
+++ b/packages/components-js/src/components/form/textarea-wrapper/textarea-wrapper.scss
@@ -33,9 +33,10 @@
   width: 100% !important;
   min-height: p-rem(188px);
   display: block !important;
-  padding: p-rem(8px) !important;
+  padding: p-rem(10px) !important;
   margin: 0 !important;
   outline: transparent none !important;
+  outline-offset: 3px !important;
   appearance: none !important;
   box-sizing: border-box !important;
   border-width: 0 !important;
@@ -51,13 +52,12 @@
   resize: vertical;
   transition: outline-color $p-animation-hover-duration $p-animation-hover-bezier,
   color $p-animation-hover-duration $p-animation-hover-bezier,
-  border-top-color 0.00001ms linear !important; // used for transitionend event listener;
+  border-top-color 1ms linear !important; // used for transitionend event listener;
 }
 
 // Focus
 ::slotted(textarea:focus) {
   outline: $p-color-theme-light-state-focus solid 2px !important;
-  outline-offset: 3px !important;
 }
 
 ::slotted(textarea:read-only:focus) {
@@ -166,7 +166,7 @@
     }
 
     &--readonly {
-      box-shadow: none;
+      box-shadow: inset 0 0 0 1px $p-color-theme-light-surface;
       background-color: $p-color-theme-light-surface;
     }
 
